--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "license": "BSD-2-Clause",
   "devDependencies": {},
   "dependencies": {
-    "resemblejs": "~1.3.0",
-    "phantomcss": "~0.10.4",
     "casperjs": "~1.1.0-beta3",
-    "slimerjs": "~0.9.6"
+    "phantomjs": "~1.9.18",
+    "slimerjs": "~0.9.6",
+    "phantomcss": "~0.10.4",
+    "resemblejs": "~1.3.0"
   }
 }
