--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "homepage": "https://github.com/bgmgmbh/visual-regression-testing",
   "devDependencies": {},
   "dependencies": {
-    "canvas": "^1.6.7",
-    "phantomcss": "~1.1.x",
-    "phantomjs-prebuilt": "^2.1.14",
-    "casperjs": "^1.1.3",
-    "resemblejs": "^2.2.3"
+    "canvas": "^1.6.11",
+    "phantomcss": "^1.5.0",
+    "phantomjs-prebuilt": "^2.1.16",
+    "casperjs": "^1.1.4",
+    "resemblejs": "^2.10.3",
+    "sanitize-filename": "^1.6.1"
   }
 }
